--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,17 @@
-// TODO
+.headerContainer {
+  height: 105px;
+  width: 100%;
+}
+
+.headerContent {
+  height: 100%;
+  max-width: 720px;
+  margin: 0 auto;
+
+  display: flex;
+  align-items: center;
+
+  img:hover {
+    cursor: pointer;
+  }
+}
