--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,69 @@
-// TODO
+.content {
+  ul + button {
+    background: transparent;
+    border: none;
+    outline: none;
+
+    color: var(--pink);
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: 600;
+
+    margin-top: 64px;
+  }
+}
+
+.postsList {
+  list-style-type: none;
+
+  li {
+    & + li {
+      margin-top: 48px;
+    }
+
+    h1 {
+      color: var(--white);
+      font-weight: 700;
+      font-size: 28px;
+      line-height: 34px;
+
+      margin-bottom: 8px;
+    }
+
+    p {
+      color: var(--light-gray);
+      text-align: justify;
+      font-size: 18px;
+      line-height: 22px;
+
+      margin-bottom: 24px;
+    }
+  }
+}
+
+.postInfoContainer {
+  display: flex;
+  align-items: center;
+
+  div {
+    display: flex;
+    align-items: center;
+
+    & + div {
+      margin-left: 24px;
+    }
+
+    svg {
+      color: var(--dark-gray);
+    }
+
+    span,
+    time {
+      font-size: 14px;
+      line-height: 17px;
+      color: var(--dark-gray);
+
+      margin-left: 8px;
+    }
+  }
+}
